--- a/src/components/Page.css
+++ b/src/components/Page.css
@@ -1,8 +1,8 @@
 .Page-content {
     margin: auto;
     width: 70%;
-    padding-top: 5%;
-    padding-bottom: 5%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .Page-content table td, .Page-content table th {
@@ -45,23 +45,33 @@
   flex-direction: column;
   width: 100%;
   margin-right: 1%;
-  padding-top: 0;
 }
 
 .example {
   display: flex;
-  justify-content: space-around;
+}
 
+.example:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .item  {
-  display: block;
-  position: relative;
-  flex:50%;
-  padding: 2% 2%;
-  height: 50%;
+  position:relative;
+  justify-content: center;
+  align-items: center;
+  padding:2%;
+  margin: 2%;
+  width: 33.3%;
+  float:left;
+}
+
+.clickable {
   width: 50%;
 }
+
+
 
 .clickable:hover  img {
   opacity: 0.5;
@@ -91,8 +101,9 @@
   font-size: 1em;
   font-weight: 600;
   background-color: black;
-  opacity: 0.60;
+  opacity: 0.70;
   text-align: center;
+  min-width: 80%;
   transform: translate(-50%, -50%);
 }
 
@@ -116,6 +127,16 @@
 .info {
   width: 100%;
   text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .item {width: 100%;}
+  .clickable {width: 100%;}
+  .example {display: block;}
+}
+
+@media screen and (min-width: 601px) and (max-width: 1000px) {
+  .item {width: 50%;}
 }
 
 @media only screen and (min-width: 768px) {
