--- a/src/components/Partners.css
+++ b/src/components/Partners.css
@@ -6,7 +6,7 @@
 
 }
 
-.Partner-image {
+.Partner-image{
     flex: 0 0 30%;
     margin: auto;
     padding: 10px;
@@ -43,4 +43,19 @@
 
 .end-partners {
   padding-bottom: 2%;
+}
+
+.title {
+  display: inline;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .Partner-box{
+    flex-direction: column;
+    justify-content: center;
+    align: center;
+    padding-top: 0;
+  }
+  .title {display:none;}
 }
